v0.8 - Pending
	+ Toolbar style follows gnome preference (requires optional gnome-python
	  dependency) (Eugenia Loli-Queru)
	+ Bug: Caps-lock breaks some shortcuts (Abisser T'khin)
	+ Bug fixes

v0.7 - June 20, 2006
	+ Slideshow mode (delay time, randomize order, disable screensaver preferences)
	+ Display animated images
	+ Edit > Open in Editor
	+ Image wrapping options: yes/no/prompt (Bjoern Martensen)
	+ Cleaned up menubar, preferences
	+ Set go navigation items' sensitivities based on context
	+ Bug: 1:1 images are sometimes incorrectly set to fit (Bjoern Martensen)
	+ Many bugfixes, interface tweaks

v0.6 - May 29, 2006
	+ In fullscreen mode, hide mouse cursor after 2 seconds of no movement
	+ Option to wrap around imagelist
	+ When in zoom-to-fit mode, fit the image when it's rotated
	+ Show broken icon if image not found (i.e. deleted) (Bjoern Martensen)
	+ Bug: Ensure that scrollbars don't show up unless needed
	+ Bug: Don't resize an image if it's at 100% zoom (David Shakaryan)
	+ Other small bugfixes

v0.5 - May 1, 2006
	+ Make open image mode configurable: smart, fit, 1:1, last (Bjoern Martensen)
	+ Option to navigate imagelist via mousewheel (default: on) (Bjoern Martensen)
	+ Add maximum/minimum zoom levels (Bjoern Martensen)
	+ Reduce border around image for fit mode (Bjoern Martensen)
	+ Have Go>Random not show images twice until all images have been shown once
	+ Allow numpad keys as shortcuts (Bjoern Martensen)
	+ Allow panning image additionally with left-click/drag (Bjoern Martensen)
	+ Revert retaining state of images in list introduced in v0.4
	+ Add hourglass feedback for loading images
	+ Bug: Small images don't zoom-to-fit (Bjoern Martensen)
	+ Bug: Some non-image files are thought to be images (Bjoern Martensen)
	+ Bug: Files/folders with spaces don't open from file manager (Bjoern Martensen)
	+ Bug: Some shortcuts don't work with numslock enabled (Bjoern Martensen)

v0.4 - April 25, 2006
	+ Removed <Alt> from navigational shortcuts